--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^4.0.1+2
   provider: ^5.0.0
   workmanager: ^0.2.4
+  flutter_phone_direct_caller: ^2.0.0
 
 dev_dependencies:
   flutter_test:
