--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,15 @@ dependencies:
   provider: ^5.0.0
   workmanager: ^0.2.4
   flutter_phone_direct_caller: ^2.0.0
+  get_storage: ^2.0.2
+  bubble_tab_indicator: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.9.0
   built_value_generator: ^8.0.6
-  get_storage: ^2.0.2
+
 
 
 # For information on the generic Dart part of this file, see the
